@startuml
!theme plain

' Entidades principais do sistema de reservas de hotéis 123Km

class User {
  -Long id
  -String username
  -String password
  -String email
  -String fullName
  -String phoneNumber
  -String documentNumber
  -LocalDate birthDate
  -Address address
  -Set<Role> roles
  -List<Reservation> reservations
  +register()
  +login()
  +updateProfile()
  +viewReservationHistory()
}

class Role {
  -Long id
  -String name // ROLE_ADMIN, ROLE_USER
}

class Hotel {
  -Long id
  -String name
  -String description
  -Integer stars
  -Address address
  -String phoneNumber
  -String email
  -List<String> amenities
  -List<Room> rooms
  -List<Review> reviews
  -Double averageRating
  -Boolean active
  +calculateAverageRating()
  +addRoom()
  +updateDetails()
}

class Room {
  -Long id
  -Hotel hotel
  -String roomNumber
  -String roomType
  -Integer capacity
  -Double pricePerNight
  -List<String> amenities
  -List<String> images
  -Boolean available
  -List<RoomAvailability> availabilityCalendar
  +checkAvailability(LocalDate startDate, LocalDate endDate)
  +updatePrice()
  +updateAvailability()
}

class RoomAvailability {
  -Long id
  -Room room
  -LocalDate date
  -Boolean isAvailable
  -Double specialPrice
}

class Reservation {
  -Long id
  -User user
  -Room room
  -LocalDate checkInDate
  -LocalDate checkOutDate
  -Integer numberOfGuests
  -ReservationStatus status
  -Double totalPrice
  -Payment payment
  -LocalDateTime createdAt
  -LocalDateTime updatedAt
  +calculateTotalPrice()
  +cancel()
  +modify()
  +confirm()
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
}

class Payment {
  -Long id
  -Reservation reservation
  -Double amount
  -PaymentMethod paymentMethod
  -PaymentStatus status
  -String transactionId
  -LocalDateTime paymentDate
  +processPayment()
  +refund()
  +generateReceipt()
}

enum PaymentMethod {
  CREDIT_CARD
  DEBIT_CARD
  BANK_TRANSFER
  PAYPAL
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}

class Review {
  -Long id
  -User user
  -Hotel hotel
  -Integer rating
  -String comment
  -LocalDateTime createdAt
  -Boolean approved
  +approve()
  +reject()
}

class Address {
  -Long id
  -String street
  -String number
  -String complement
  -String neighborhood
  -String city
  -String state
  -String country
  -String zipCode
}

class SearchFilter {
  -String location
  -LocalDate checkInDate
  -LocalDate checkOutDate
  -Integer numberOfGuests
  -Integer minStars
  -Integer maxStars
  -Double minPrice
  -Double maxPrice
  -List<String> amenities
  +applyFilters()
}

' Relacionamentos
User "1" *-- "*" Role : has
User "1" *-- "*" Reservation : makes
User "1" *-- "*" Review : writes

Hotel "1" *-- "*" Room : contains
Hotel "1" *-- "*" Review : receives
Hotel "1" *-- "1" Address : located at

Room "1" *-- "*" RoomAvailability : has
Room "1" *-- "*" Reservation : booked through

Reservation "1" *-- "1" Payment : has
Reservation "*" -- "1" ReservationStatus : has

Payment "*" -- "1" PaymentMethod : uses
Payment "*" -- "1" PaymentStatus : has

@enduml
